[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "rename_tool"
version = "0.1.0"
description = "Bulk file renaming tool"
authors = [{name="hito"}]

dependencies = [
    "rich",
    "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rename-tool = "rename_tool.main:main"